[studio-hints] add resizeobserver polyfill and fix snackbar z-index

--- a/packages/@sanity/components/src/snackbar/styles/SnackbarItem.css
+++ b/packages/@sanity/components/src/snackbar/styles/SnackbarItem.css
@@ -2,7 +2,7 @@
 
 .root {
   position: fixed;
-  z-index: var(--zindex-modal);
+  z-index: var(--zindex-drawer);
   bottom: 0;
   right: 0;
   transform: translate3d(100vw, 0, 0);
